# DRF-sample

./: .gitignore  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml
application/: urls.py
application/apiv1/: serializers.py  urls.py  views.py
application/frontend/: package.json
application/frontend/src/: App.vue  router.js
application/frontend/src/views/: Todo.vue
application/settings/: __init__.py  base.py  local.py
application/todo/: admin.py  models.py
application/todo/migrations/: 0001_initial.py  0002_auto_20190803_2122.py
docker/django/: Dockerfile  start-server.sh
docker/vue/: Dockerfile  start-server.sh
